--- a/styles/style.css
+++ b/styles/style.css
@@ -6,28 +6,33 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
   position: relative;
   display: flex;
+  background-color: #f2f2f2;
 }
 
 .logo {
   z-index: 2;
-  width: 183px;
-  height: 32px;
 }
 
 .logo_place_header {
+  width: 183px;
+  height: 32px;
   position: absolute;
   top: 30px;
   left: 64px;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
 }
 
 .header__title {
@@ -69,10 +74,129 @@
   right: 0;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.description {
+  display: flex;
+}
+
+.section_top-padding_100px {
+  padding-top: 100px;
+}
+
+.section_top-padding_90px {
+  padding-top: 90px;
+}
+
+.section_top-padding_60px {
+  padding-top: 60px;
+}
+
+.section_bottom-padding_100px {
+  padding-bottom: 100px;
+}
+
+.section_bottom-padding_90px {
+  padding-bottom: 90px;
+}
+
+.section_bottom-padding_40px {
+  padding-bottom: 40px;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  flex-direction: column;
+  justify-content: space-between;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph {
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+}
+
+.section-title {
+  margin: auto;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-title_bottom-margin_20px {
+  margin-bottom: 20px;
+}
+
+.section-title_theme_dark {
+  color: #fff;
+}
+
+.section-subtitle {
+  margin: auto;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.section-subtitle_theme_dark {
+  color: #fff;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.table__cell {
+  width: 250px;
+}
+
+.table__cell_theme_white {
+  margin-right: 0;
+  margin-top: 60px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -81,4 +205,137 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text_theme_white {
+  margin-top: 20px;
+}
+.table__text_theme_dark {
+  margin-top: 20px;
+}
+
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  position: relative;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 0 auto 70px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+}
+
+.kaufman {
+  background-color: #000;
+  position: relative;
+  z-index: -2;
+  overflow: hidden;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+  width: 877px;
+  height: 877px;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #000;
+  display: flex;
+}
+
+.footer__columns {
+  width: 90%;
+  justify-content: space-between;
+  color: #fff;
+  display: flex;
+  margin: 0 auto;
+  position: relative;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+}
+
+.footer__column-links_top-margin_20px {
+  margin-top: 20px;
+}
+
+.footer__author {
+  padding: 18px 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column__link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  display: flex;
+}
+
+.footer__column__link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #fff;
+  align-items: center;
+}
+
+.footer__social_icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
