--- a/styles/style.css
+++ b/styles/style.css
@@ -37,23 +37,26 @@
 
 .header__title {
   margin: auto 0 auto 64px;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
   z-index: 2;
   vertical-align: middle;
+  padding: 0;
 }
 
 .header__subtitle {
   position: absolute;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  max-width: 388px;
   z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
 
 .header__main-illustration {
@@ -81,30 +84,8 @@
 
 .description {
   display: flex;
-}
-
-.section_top-padding_100px {
+  box-sizing: border-box;
   padding-top: 100px;
-}
-
-.section_top-padding_90px {
-  padding-top: 90px;
-}
-
-.section_top-padding_60px {
-  padding-top: 60px;
-}
-
-.section_bottom-padding_100px {
-  padding-bottom: 100px;
-}
-
-.section_bottom-padding_90px {
-  padding-bottom: 90px;
-}
-
-.section_bottom-padding_40px {
-  padding-bottom: 40px;
 }
 
 .two-columns {
@@ -116,12 +97,13 @@
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
   margin: 0;
+  padding: 0;
 }
 
 .two-columns__main-text {
@@ -132,11 +114,12 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
 
 .two-columns__paragraph {
-  margin-bottom: 30px;
-  margin-top: 0;
+  margin: 0 0 30px 0;
 }
 
 .two-columns__paragraph:last-of-type {
@@ -150,32 +133,43 @@
 .digits {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .section-title {
-  margin: auto;
+  margin: 0 auto;
   width: 60%;
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
-}
-
-.section-title_bottom-margin_20px {
-  margin-bottom: 20px;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .section-title_theme_dark {
   color: #fff;
 }
 
+/* Поскольку section-title это блок, который переиспользуется в разных частях страницы, внешнюю геометрию задал через микс */
+.digits__section-title {
+  margin-bottom: 20px;
+}
+
+.kaufman__section-title {
+  margin-bottom: 20px;
+}
+
 .section-subtitle {
-  margin: auto;
+  margin: 0 auto;
   width: 60%;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  padding: 0;
 }
 
 .section-subtitle_theme_dark {
@@ -188,15 +182,15 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: auto;
+  padding: 0;
+  list-style-type: none;
 }
 
 .table__cell {
   width: 250px;
-}
-
-.table__cell_theme_white {
-  margin-right: 0;
-  margin-top: 60px;
+  z-index: 1;
+  margin: 60px 0 0;
+  padding: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -211,37 +205,37 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin: 0;
+  padding: 0;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-}
-
-.table__text_theme_white {
-  margin-top: 20px;
-}
-.table__text_theme_dark {
-  margin-top: 20px;
+  margin: 20px 0 0;
+  padding: 0;
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-position: bottom left;
   position: relative;
+  box-sizing: border-box;
+  padding: 100px 0 0;
 }
 
 .feynman__title {
-  width: 648px;
+  max-width: 648px;
   margin: 0 auto 70px;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
+  padding: 0;
 }
 
 .feynman__subtitle {
@@ -250,6 +244,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  padding: 0;
 }
 
 .feynman__link {
@@ -260,28 +255,32 @@
   top: 50%;
   right: 48px;
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .kaufman {
-  background-color: #000;
+  background-color: #1f1f1f;
   position: relative;
-  z-index: -2;
   overflow: hidden;
+  padding: 90px 0;
+  box-sizing: border-box;
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
   width: 877px;
   height: 877px;
 }
 
 .footer {
   min-height: 350px;
-  background-color: #000;
+  background-color: #1f1f1f;
   display: flex;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
 }
 
 .footer__columns {
@@ -290,23 +289,21 @@
   color: #fff;
   display: flex;
   margin: 0 auto;
-  position: relative;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_copyright {
   flex-basis: 711px;
-}
-
-.footer__column-links_top-margin_20px {
-  margin-top: 20px;
+  justify-content: space-between;
 }
 
 .footer__author {
-  padding: 18px 0;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  margin: 0;
+  padding: 0;
+  margin: 18px 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -316,20 +313,30 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin: 0 0 20px;
+  padding: 0;
 }
 
-.footer__column__link {
+.footer__column-links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__column-link {
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
   color: #fff;
-  align-items: center;
-  display: flex;
+  align-items:flex-start;
+  margin: 0;
+  padding: 0;
 }
 
-.footer__social_icon {
+.footer__social-icon {
   width: 16px;
   height: 16px;
-  margin-right: 10px;
+  margin: 0 16px 0 0;
+  padding: 0;
 }
