--- a/styles/style.css
+++ b/styles/style.css
@@ -16,10 +16,7 @@
   position: relative;
   display: flex;
   background-color: #f2f2f2;
-}
-
-.logo {
-  z-index: 2;
+  z-index: 1;
 }
 
 .logo_place_header {
@@ -41,7 +38,6 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
-  z-index: 2;
   vertical-align: middle;
   padding: 0;
 }
@@ -51,7 +47,6 @@
   left: 64px;
   bottom: 30px;
   max-width: 388px;
-  z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -60,12 +55,14 @@
 }
 
 .header__main-illustration {
+  background-image: url(../images/header-image.png);
+  background-size: cover;
   position: absolute;
   right: 0;
   bottom: 0;
   width: 765px;
   height: 608px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .header__square-pic {
@@ -75,6 +72,7 @@
   position: absolute;
   top: 64px;
   right: 0;
+  z-index: -2;
 }
 
 .header__link {
@@ -188,7 +186,6 @@
 
 .table__cell {
   width: 250px;
-  z-index: 1;
   margin: 60px 0 0;
   padding: 0;
 }
@@ -264,6 +261,7 @@
   overflow: hidden;
   padding: 90px 0;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -272,7 +270,9 @@
   top: 0;
   right: -210px;
   width: 877px;
+  background-size: cover;
   height: 877px;
+  z-index: -1;
 }
 
 .footer {
@@ -321,6 +321,9 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .footer__column-link {
@@ -329,7 +332,7 @@
   font-weight: normal;
   text-decoration: none;
   color: #fff;
-  align-items:flex-start;
+  align-items: center;
   margin: 0;
   padding: 0;
 }
