сделал анимации и блок с техниками обучения

--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,3 +2,9 @@
   color: #2f80ed;
   text-decoration: none;
 }
+
+/* TODO: правильно ли, что псевдокласс описан в в том же файле где и основные стили */
+.header__link:hover {
+  opacity: 0.6;
+  transition: opacity 0.5s;
+}
