--- a/blocks/kaufman/__rotation/kaufman__rotation.css
+++ b/blocks/kaufman/__rotation/kaufman__rotation.css
@@ -1,6 +1,3 @@
 .kaufman__rotation {
-  animation-name: rotation;
-  animation-duration: 20s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+  animation-name: rotation 20s linear infinite;
 }
