--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -3,4 +3,9 @@
   height: 38px;
   display: flex;
   justify-content: center;
+  transition: opacity 0.5s;
+}
+
+.resources__logo:hover {
+  opacity: 0.6;
 }
